fix scrollbar on sidebar

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,3 +30,8 @@
  */
 
 @import "~@tabler/core/src/scss/tabler";
+
+#global-sidebar {
+   overflow-x: hidden;
+   scrollbar-width: thin;
+}
